##
## CMakeLists.txt for ParticleSystem in /home/mart_p/ParticleSystem
## 
## Made by Louis Martin-Pierrat
## Login   <mart_p@epitech.net>
## 
## Started on  Thu Oct 16 21:10:57 2014 Louis Martin-Pierrat
## Last update Fri Oct 17 16:56:11 2014 Louis Martin-Pierrat
##


## CMAKE INITIALISATION

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
## SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules/")
PROJECT(ParticleSystem)

## END CMAKE INITIALISATION




## PROJECT VERSION

SET(PARTICLESYSTEM_VERSION_MAJOR "1")
SET(PARTICLESYSTEM_VERSION_MINOR "0")
SET(PARTICLESYSTEM_VERSION_PATCH "0")
SET(PARTICLESYSTEM_VERSION_EXTRA "")

SET(PARTICLESYSTEM_VERSION "${PARTICLESYSTEM_VERSION_MAJOR}.${PARTICLESYSTEM_VERSION_MINOR}")
SET(PARTICLESYSTEM_VERSION_FULL "${PARTICLESYSTEM_VERSION}.${PARTICLESYSTEM_VERSION_PATCH}${PARTICLESYSTEM_VERSION_EXTRA}")

## END PROJECT VERSION




## PROJECT LANGUAGE

ENABLE_LANGUAGE(CXX)

## END PROJECT LANGUAGE




## PROJECT SOURCES FILES

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/Shape)

## END PROJECT SOURCES FILES




## PROJECT INCLUDE DIRECTORIES

GET_PROPERTY(IDIR GLOBAL PROPERTY INCLUDEDIR)
INCLUDE_DIRECTORIES(${IDIR})

## END INCLUDE DIRECTORIES




## PROJECT CONFIGURATION

SET(CMAKE_CXX_FLAGS "-W -Wall -Wextra")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/")
GET_PROPERTY(SRCS GLOBAL PROPERTY SOURCES)
ADD_EXECUTABLE(ParticleSystem ${SRCS})

## END PROJECT CONFIGURATION
