##
## CMakeLists.txt for ParticleSystem in /ParticleSystem/Shape
## 
## Made by Louis Martin-Pierrat
## Login   <mart_p@epitech.net>
## 
## Started on  Fri Oct 17 17:02:52 2014 Louis Martin-Pierrat
## Last update Fri Oct 17 17:05:03 2014 Louis Martin-Pierrat
##


## CMAKE INITIALISATION

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

## END CMAKE INITIALISATION




## ADD SUBDIRECTORY

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Demo1)

## END


## INCLUDE DIRECTORY


## END INCLUDE DIRECTORY



## SET SOURCES FILES


## END
