##
## CMakeLists.txt for ParticleSystem in /ParticleSystem/Shape
## 
## Made by Louis Martin-Pierrat
## Login   <mart_p@epitech.net>
## 
## Started on  Fri Oct 17 17:02:52 2014 Louis Martin-Pierrat
## Last update Fri Oct 17 17:05:03 2014 Louis Martin-Pierrat
##

## ADD SUBDIRECTORY

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Opengl3DRenderer/)

## END


## INCLUDE DIRECTORY

GET_PROPERTY(IDIR GLOBAL PROPERTY INCLUDEDIR)
SET(IDIR
	${IDIR}
	${CMAKE_CURRENT_SOURCE_DIR}/
	)
SET_PROPERTY(GLOBAL PROPERTY INCLUDEDIR ${IDIR})

## END INCLUDE DIRECTORY



## SET SOURCES FILES

## END




## SET HEADER FILES

GET_PROPERTY(HEADERS_FILES GLOBAL PROPERTY HEADERS)
SET(HEADERS_FILES
	${HEADERS_FILES}
	${CMAKE_CURRENT_SOURCE_DIR}/Renderer.hpp
	)
SET_PROPERTY(GLOBAL PROPERTY HEADERS ${HEADERS_FILES})

## END
