##
## CMakeLists.txt for ParticleSystem in /ParticleSystem/Shape
## 
## Made by Louis Martin-Pierrat
## Login   <mart_p@epitech.net>
## 
## Started on  Fri Oct 17 17:02:52 2014 Louis Martin-Pierrat
## Last update Fri Oct 17 17:05:03 2014 Louis Martin-Pierrat
##

## ADD SUBDIRECTORY

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/BoxShape)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ConeShape)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/HemisphereShape)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SphereShape)

## END


## INCLUDE DIRECTORY

GET_PROPERTY(IDIR GLOBAL PROPERTY INCLUDEDIR)
SET(IDIR
	${IDIR}
	${CMAKE_CURRENT_SOURCE_DIR}/
	)
SET_PROPERTY(GLOBAL PROPERTY INCLUDEDIR ${IDIR})

## END INCLUDE DIRECTORY



## SET SOURCES FILES

GET_PROPERTY(SRCS GLOBAL PROPERTY SOURCES)
SET(SRCS
	${SRCS}
	${CMAKE_CURRENT_SOURCE_DIR}/Shape.cpp
	)
SET_PROPERTY(GLOBAL PROPERTY SOURCES ${SRCS})

## END
