##
## CMakeLists.txt for ParticleSystem in /home/mart_p/ParticleSystem
## 
## Made by Louis Martin-Pierrat
## Login   <mart_p@epitech.net>
## 
## Started on  Thu Oct 16 21:10:57 2014 Louis Martin-Pierrat
## Last update Fri Oct 17 16:56:11 2014 Louis Martin-Pierrat
##


## CMAKE INITIALISATION

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
## SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules/")
PROJECT(Demo1)

## END CMAKE INITIALISATION




## PROJECT VERSION

SET(DEMO1_VERSION_MAJOR "1")
SET(DEMO1_VERSION_MINOR "0")
SET(DEMO1_VERSION_PATCH "0")
SET(DEMO1_VERSION_EXTRA "")

SET(DEMO1_VERSION "${DEMO1_VERSION_MAJOR}.${DEMO1_VERSION_MINOR}")
SET(DEMO1_VERSION_FULL "${DEMO1_VERSION}.${DEMO1_VERSION_PATCH}${DEMO1_VERSION_EXTRA}")

## END PROJECT VERSION




## PROJECT LANGUAGE

ENABLE_LANGUAGE(CXX)

## END PROJECT LANGUAGE




## PROJECT SOURCES FILES

GET_PROPERTY(SRCS_DEMO1 GLOBAL PROPERTY SOURCES_DEMO1)
SET(SRCS_DEMO1
	${SRCS_DEMO1}
	${CMAKE_CURRENT_SOURCE_DIR}/Shape.cpp
	)
SET_PROPERTY(GLOBAL PROPERTY SOURCES_DEMO1 ${SRCS_DEMO1})

## END PROJECT SOURCES FILES




## PROJECT INCLUDE DIRECTORIES

GET_PROPERTY(IDIR_DEMO1 GLOBAL PROPERTY INCLUDEDIR_DEMO1)
INCLUDE_DIRECTORIES(${IDIR_DEMO1})

## END INCLUDE DIRECTORIES




## PROJECT CONFIGURATION

SET(CMAKE_CXX_FLAGS "-W -Wall -Wextra")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/")
GET_PROPERTY(SRCS_DEMO1 GLOBAL PROPERTY SOURCES_DEMO1)
ADD_EXECUTABLE(Demo1 ${SRCS_DEMO1})

## END PROJECT CONFIGURATION
